--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header>
         <a href="#" class="logo">
             <i class="fas fa-code"></i>
-            <span>Tripal</span>
+            <span>Tripal Stack</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
