--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
         
         <section id="contact" class="Contact">
             <h2>Contact Me</h2>
-            <form action="https://formsubmit.co/609fceb8815536b104b66dc0d504566aom" method="post" class="contact-form">
+            <form action="https://formsubmit.co/609fceb8815536b104b66dc0d504566a" method="post" class="contact-form">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="Message" placeholder="Your Message" required></textarea>
+                <input type="hidden" name="_next" value="https://syncropal.github.io/thank-you.html">
+                <input type="hidden" name="_subject" value="New submission from your form">
                 <button type="submit" class="btn">Send Message</button>
             </form>
             <div class="contact-info">
