--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="Message" placeholder="Your Message" required></textarea>
-                <input type="hidden" name="_next" value="https://syncropal.github.io/thank-you.html">
+                <input type="hidden" name="_next" value="https://syncropal.github.io/thankyou.html">
                 <input type="hidden" name="_subject" value="New submission from your form">
                 <button type="submit" class="btn">Send Message</button>
             </form>
