Updating Thankyou html

--- a/thankyou.html
+++ b/thankyou.html
@@ -78,7 +78,7 @@
         
         <div class="redirect">
             <p>Steaming back to homepage in <span id="countdown">5</span> seconds...</p>
-            <p><a href="https://Tripalstack.github.io">Click here</a> if you're not redirected</p>
+            <p><a href="https://Syncropal.github.io/Tripalstack/">Click here</a> if you're not redirected</p>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
             
             if (seconds <= 0) {
                 clearInterval(countdown);
-                window.location.href = "https://Tripalstack.github.io";
+                window.location.href = "https://Syncropal.github.io/Tripalstack/";
             }
         }, 1000);
     </script>
